--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML5 Breakout</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- We use canvas to draw stuff on the screen. -->
